fixing scrollbar

--- a/style.css
+++ b/style.css
@@ -105,19 +105,9 @@ main {
   border-radius: 12px;
   cursor: pointer;
 }
-.buttonActive:hover {
-  scale: 105%;
-  background-color: rgb(252, 144, 198);
-  transition: 0.2s ease-in-out;
-}
 
 .hidden {
   display: none;
-}
-
-.buttonActive {
-  cursor: pointer;
-  background-color: rgb(251, 113, 182);
 }
 
 .disabled {
@@ -182,21 +172,22 @@ main {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   border-radius: 20px;
   box-sizing: border-box;
-
   padding: 3.5rem;
   line-height: 1.5;
 }
 
 .card .back {
   transform: rotateY(180deg);
-
   font-size: 1.1rem;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  scrollbar-width: auto;
+  scrollbar-color: rgb(207, 233, 238) transparent;
 }
 
 .card .front {
@@ -377,8 +368,8 @@ main {
 
 @media only screen and (max-width: 500px) {
   main {
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
   }
 }
 
@@ -389,10 +380,5 @@ main {
   .overlay {
     height: 246px;
     font-size: 1rem;
-  }
-  main {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    padding-bottom: 2rem;
   }
 }
